--- a/src/assets/scss/setting/_vars.scss
+++ b/src/assets/scss/setting/_vars.scss
@@ -9,7 +9,12 @@
     --black400: #444;
     --black500: #000;
 
-    --blackAlpha100:#11111127;;
+    --blackAlpha: #00000000;
+    --blackAlpha100: #00000025;
+    --blackAlpha200: #0000004d;
+    --blackAlpha300: #00000091;
+    --blackAlpha400: #000000c3;
+    --blackAlpha500: #000000eb;
     
     --white: #fff;
     --white100: #efefef;
@@ -18,7 +23,7 @@
     --white400: #fff;
     --white500: #fff;
 
-    --red:#f00;
+    --red: #f00;
     
     // 폰트 셋팅
     font-family: var(--mainfont-nanum), var(--mainfont-nexon);
