--- a/src/assets/scss/section/_developer.scss
+++ b/src/assets/scss/section/_developer.scss
@@ -1,49 +1,83 @@
 .developer__inner {
-    display: flex;
-    flex-wrap: wrap;
+  width: 100%; // Swiper 기본 구조를 쓰기 때문에 flex 제거
 
-    &.overflow {
+  .developer {
+//   margin-right: 20px;
+
+  .developer__img {
+    // width: 150px;
+    // height: 150px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-bottom: 10px;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+      border-radius: 50%;
+    }
+  }
+
+  .developer__info {
+    // width: 150px;
+    text-align: center;
+    @include line-one;
+    // padding-bottom: 40px;
+  }
+}
+}
+
+
+
+#developerPage {
+    .developer__inner {
+       display:flex;
+       flex-wrap:wrap;
+         &.overflow {
         width: 100%;
         height: 200px;
         overflow: hidden;
     }
 
-    .developer {
-        margin-right: 20px;
-
+        .developer {
+            margin-right: 20px;
+        }
         .developer__img {
             width: 150px;
             height: 150px;
-            border-radius: 50%;
-            overflow: hidden;
-            margin-bottom: 10px;
         }
         .developer__info {
             width: 150px;
-            text-align: center;
-            @include line-one;
             padding-bottom: 40px;
         }
     }
 }
-@media (max-width: 1200px){
-    .developer__inner {
-        justify-content: center;
 
-        .developer {
-            margin-right: 0;
-            
-            .developer__img {
-                width: 130px;
-                height: 130px;
-                margin: 10px auto;
-            }
-            .developer__info {}
-        }   
+@media (max-width: 1200px){
+    #developerPage {
+        .developer__inner {
+            justify-content: center;
+    
+            .developer {
+                margin-right: 0;
+                
+                .developer__img {
+                    width: 130px;
+                    height: 130px;
+                    margin: 10px auto;
+                }
+            }   
+        }
     }
+    
 }
 @media (max-width: 800px){
-    .developer__inner {
-        margin-top: 70px;
+    #developerPage {
+        .developer__inner {
+            margin-top: 70px;
+        }
     }
 }
+
